# send

./: .gitignore  README.MD  pyproject.toml
docs/: README.MD
docs/whitepapers/: Makefile  args.tex  simplewhitepaper.cls
send/: constants.py  invitation.py  logger.py  main.py  manager.py  permissions.py  receiver.py  transmitter.py  zmqhelpers.py
tests/: test_send.py
