[tool.poetry]
name = "send"
version = "0.1.0"
description = ""
authors = ["Chris Sweet <chris.sweet0320@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
zmq = "^0.0.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
